the New Virtual Machine Wizard.

Fixed bug that would not import SCSI controllers and attached
disk images when using the Import Appliance Wizard.

Added progress operation images.

Updated text when deleting / removing a VM to match VirtualBox
GUI.

USB devices can now be attached / detached to a running VM.

Medium attachments for storage controllers on VM details tab
are now properly sorted instead of returned in the arbitrary
order that they are read from VirtualBox.

VRDE Server (remote display) is now enabled by default when
creating a new VM.

Refreshing the VirualBox host in the machine list now refreshes
system properties cache as well.

-------------------------------------
	4-1 - 2011-01-09
-------------------------------------
Changed behavior of file browser to always use config setting
for browserLocal regardless of browser's host. This should be
OK now that IVFSExplorer bugs are fixed in VirtualBox 4.0.

Fixed bug in Create HardDisk wizard functionality that would
only allow a disk of size 1MB to be created.

Fixed bug in display settings when the RDP extension pack is
not installed.

Fixed "Detach" console bug.

Disable Console tab when IE is detected. The Flash RDP client
from Oracle does not appear to work with IE. Even the demo
distributed with the flash control does not work. It appears
that RDPWebEventLoaded event is never triggered after the
flash control loads. -- Invalid - 2011-1-10

Max HD slider size in New HD wizard is now limited to 512GB.
Anything over that and the slider loses so much precision that
it becomes useless. You may still type a larger size in the
size text box. E.g. "1 TB"

-------------------------------------
	4-0 - 2011-01-07
-------------------------------------
UI and back-end changes to match new version of VirtualBox.

Updated jquery-ui to 1.8.2.

Updated jquery to 1.4.4

Fixed bug that would not allow console connections if accessing
phpVirtualBox through a URL where a port is specified. E.g.