@@ -60,7 +60,7 @@ GUI.
 USB devices can now be attached / detached to a running VM.
 
 Medium attachments for storage controllers on VM details tab
-are now properly sorted instead of returned in the arbitrary
+are now properly sorted instead of printed in the arbitrary
 order that they are read from VirtualBox.
 
 VRDE Server (remote display) is now enabled by default when
@@ -68,6 +68,14 @@ creating a new VM.
 
 Refreshing the VirualBox host in the machine list now refreshes
 system properties cache as well.
+
+Fixed preview window scrolling bug. In some browsers, the
+preview thumbnail would stay in place as the window was
+scrolled.
+
+Fixed browser quirks when switching VMs. This would cause the
+vm list pane to grow in width while a VM was loading in
+certain browsers.
 
 -------------------------------------
 	4-1 - 2011-01-09
